# SQUID

./: .gitignore  README.md  pyproject.toml  squid_stateMachine.py
src/: Untitled.ipynb  evaluator_collectors.py  run_optuna.py  stab_vs_imit_collectors.py  train.py
src/agent/: contrastive_imitation.py  dynamical_system.py  log_dynamical_system.py  neural_network.py  neural_network_logso3.py
src/agent/utils/: dynamical_system_operations.py  euclideanize_so3_data.py  polar.py  ranking_losses.py  spatialmath.py  tangent_space_operations.py
src/data_preprocessing/: data_loader.py  data_preprocessor.py
src/data_preprocessing/utils/: geometric_utility.py
src/datasets/: bat-signal.npy  batman.npy  dataset_keys.py  star.npy
src/datasets/cycle/limit_cycle/: cycle_0.npy  cycle_1.npy
src/datasets/cycle/otto/: otto_0.npy  otto_1.npy  otto_2.npy  otto_3.npy
src/datasets/cycle/strange_cycle/: multi_v2_0.npy
src/datasets/eval_dataset/v1/: multi_v2_0.npy  multi_v2_2.npy  multi_v2_3.npy  multi_v2_5.npy
src/datasets/eval_dataset/v2/: crossed_trajectory_circle_0.npy  crossed_trajectory_circle_1.npy  crossed_trajectory_circle_2.npy  crossed_trajectory_circle_3.npy  crossed_trajectory_circle_4.npy  crossed_trajectory_circle_5.npy  crossed_trajectory_circle_6.npy  crossed_trajectory_circle_7.npy
src/datasets/eval_dataset/v3/: crossed_trajectory_circle_0.npy  crossed_trajectory_circle_1.npy  crossed_trajectory_circle_2.npy  crossed_trajectory_circle_3.npy  crossed_trajectory_circle_4.npy  crossed_trajectory_circle_5.npy
src/datasets/eval_dataset/v4/: multi_3_attractor_5.npy  multi_3_attractor_6.npy  multi_3_attractor_7.npy  multi_3_attractor_8.npy  multi_3_attractor_9.npy
src/datasets/eval_dataset/v5/: multi_3_attractor_0.npy  multi_3_attractor_11.npy  multi_3_attractor_2.npy  multi_3_attractor_3.npy  multi_3_attractor_8.npy  multi_3_attractor_9.npy
src/datasets/eval_dataset/v6/: crossed_trajectory_circle_0.npy  crossed_trajectory_circle_1.npy  crossed_trajectory_circle_10.npy  crossed_trajectory_circle_11.npy  crossed_trajectory_circle_2.npy  crossed_trajectory_circle_3.npy  crossed_trajectory_circle_4.npy  crossed_trajectory_circle_5.npy  crossed_trajectory_circle_6.npy  crossed_trajectory_circle_7.npy  crossed_trajectory_circle_8.npy  crossed_trajectory_circle_9.npy
src/datasets/eval_dataset/v7/: crossed_trajectory_circle_0.npy  crossed_trajectory_circle_1.npy  crossed_trajectory_circle_10.npy  crossed_trajectory_circle_2.npy  crossed_trajectory_circle_3.npy  crossed_trajectory_circle_4.npy  crossed_trajectory_circle_5.npy  crossed_trajectory_circle_6.npy  crossed_trajectory_circle_7.npy  crossed_trajectory_circle_8.npy  crossed_trajectory_circle_9.npy
src/datasets/franka_npz/2-traj-side/: side_grab_left3.npz
src/datasets/franka_npz/2-traj-top/: top_grab_left2.npz  top_grab_right6.npz
src/datasets/franka_npz/few_side/: side_grab_right5.npz
src/datasets/franka_npz/few_top/: top_grab_left1.npz  top_grab_left5.npz  top_grab_right2.npz  top_grab_right4.npz
src/datasets/franka_npz/side_grab/: side_grab_left1.npz  side_grab_left10.npz  side_grab_left2.npz  side_grab_left4.npz  side_grab_left5.npz  side_grab_left6.npz  side_grab_left7.npz  side_grab_left8.npz  side_grab_left9.npz  side_grab_right1.npz  side_grab_right10.npz  side_grab_right2.npz  side_grab_right3.npz  side_grab_right4.npz  side_grab_right6.npz  side_grab_right7.npz  side_grab_right8.npz  side_grab_right9.npz
src/datasets/franka_npz/top_grab/: top_grab_left10.npz  top_grab_left3.npz  top_grab_left4.npz  top_grab_left6.npz  top_grab_left7.npz  top_grab_left8.npz  top_grab_left9.npz  top_grab_right1.npz  top_grab_right10.npz  top_grab_right3.npz  top_grab_right5.npz  top_grab_right7.npz  top_grab_right8.npz  top_grab_right9.npz
src/datasets/joint_space/picking/: joints_state_0.pk  joints_state_1.pk  joints_state_10.pk  joints_state_11.pk  joints_state_13.pk  joints_state_14.pk  joints_state_15.pk  joints_state_16.pk  joints_state_17.pk  joints_state_18.pk  joints_state_2.pk  (+7 more)
src/evaluation/: evaluate.py  evaluate_2d_o1.py  evaluate_3d.py  evaluate_3d_shape.py  evaluate_7D_frame.py  evaluate_7d_o1.py  evaluate_nd.py  evaluate_shape.py  evaluator_init.py
src/evaluation/utils/: saving.py  similarity_measures.py
src/hyperparam_optimization/: optuna_functions.py
src/params/: 1st_order_2D.py  1st_order_3D.py  1st_order_joint_space.py  2nd_order_2D_multiattractor.py  Discrete_Condor.py  Discrete_Condor_3D.py  Discrete_Condor_3D_spherical.py  Discrete_Condor_joint.py  Discrete_Condor_joint_spherical.py  Discrete_Condor_s2.py  Discrete_Condor_s2_kuka.py  Discrete_Condor_spherical.py  Discrete_Squid_R2_1o.py  Discrete_Squid_R3_1o.py  Discrete_Squid_S2_1o.py  Discrete_Squid_S2_1o_BL.py  Discrete_Squid_S3_1o.py  Discrete_Squid_S_1o_Franka.py  Discrete_Squid_S_1o_kuka.py  Discrete_Squid_Torus_R2.py  oriented_condor.py  oriented_condor_euler.py  shape_BULBASAUR.py  shape_CHARMENDER.py  shape_CIRCLE.py  shape_CIRCLE_3D.py  shape_CIRCLE_imit.py  shape_SQUIRTLE.py  shape_STAR.py
src/tools/: draw_mouse.py  hard_neg_extraction.py  load_model_plot.py  plot_3D.py
src/tools/matlab_script/: multivariate.asv  multivariate.m  plot_gaussian.m  potential.m  v_multivar.m
(+1118 files in other folders)
