[tool.poetry]
name = "squid"
version = "0.0.2"
description = ""
authors = ["dema <gg.dema.rm.22@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9"
absl-py = "2.1.0"
aiofiles = "24.1.0"
alembic = "1.12.1"
ansitable = "0.10.0"
antlr4-python3-runtime = "4.9.3"
anyio = "4.5.2"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "24.2.0"
autopage = "0.5.2"
babel = "2.16.0"
backcall = "0.2.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
blinker = "1.8.2"
cachetools = "4.2.4"
certifi = "2024.8.30"
cffi = "1.17.1"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
ci-info = "0.3.0"
click = "8.1.7"
cliff = "3.10.1"
cmaes = "0.11.1"
cmd2 = "2.4.3"
colored = "1.4.4"
colorlog = "6.8.2"
comm = "0.2.2"
configobj = "5.0.9"
configparser = "7.1.0"
cycler = "0.11.0"
dash = "*"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
debugpy = "1.8.8"
decorator = "5.1.1"
defusedxml = "0.7.1"
distlib = "0.3.8"
etelemetry = "0.3.1"
exceptiongroup = "1.2.2"
executing = "2.1.0"
fastjsonschema = "2.21.1"
filelock = "3.15.4"
fitz = "0.0.1.dev2"
flake8 = "7.0.0"
Flask = "3.0.3"
fonttools = "4.38.0"
fqdn = "1.5.1"
frontend = "0.0.3"
google-auth = "1.35.0"
google-auth-oauthlib = "0.4.6"
greenlet = "3.1.0"
grpcio = "1.62.3"
h11 = "0.14.0"
httpcore = "1.0.7"
httplib2 = "0.22.0"
httpx = "0.28.1"
identify = "2.6.0"
idna = "3.10"
importlib-metadata = "6.7.0"
importlib-resources = "5.12.0"
ipykernel = "6.29.5"
ipython = "8.12.3"
isodate = "0.6.1"
isoduration = "20.11.0"
itsdangerous = "2.2.0"
jedi = "0.19.2"
Jinja2 = "3.1.4"
joblib = "1.4.2"
json5 = "0.10.0"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter_client = "8.6.3"
jupyter_core = "5.7.2"
jupyter_server = "2.14.2"
jupyter_server_terminals = "0.5.3"
jupyterlab = "4.3.3"
jupyterlab_pygments = "0.3.0"
jupyterlab_server = "2.27.3"
kaleido = "0.2.1"
kiwisolver = "1.4.5"
looseversion = "1.3.0"
lxml = "5.3.0"
Mako = "1.2.4"
Markdown = "3.4.4"
MarkupSafe = "2.1.5"
matplotlib = "3.5.3"
matplotlib-inline = "0.1.7"
mccabe = "0.7.0"
mistune = "3.0.2"
mypy-extensions = "1.0.0"
nbclient = "0.10.1"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.1"
nibabel = "5.2.1"
nipype = "1.8.6"
nodeenv = "1.9.1"
notebook = "7.3.1"
notebook_shim = "0.2.4"
numpy = "1.21.6"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cudnn-cu11 = "8.5.0.96"
oauthlib = "3.2.2"
omegaconf = "2.3.0"
optuna = "2.10.1"
overrides = "7.7.0"
packaging = "24.0"
pandas = "2.0.3"
pandocfilters = "1.5.1"
parso = "0.8.4"
pathlib = "1.0.1"
pbr = "6.1.0"
pexpect = "4.9.0"
pickle4 = "0.0.1"
pickleshare = "0.7.5"
Pillow = "9.5.0"
pkgutil_resolve_name = "1.3.10"
platformdirs = "4.2.2"
plotly = "5.18.0"
pre-commit = "3.5.0"
prettytable = "3.7.0"
prometheus_client = "0.21.1"
prompt_toolkit = "3.0.48"
protobuf = "3.20.0"
prov = "2.0.1"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pycodestyle = "2.11.1"
pycparser = "2.22"
pydot = "3.0.2"
pyflakes = "3.2.0"
Pygments = "2.18.0"
pyparsing = "3.1.4"
pyperclip = "1.9.0"
python-dateutil = "2.9.0.post0"
python-json-logger = "3.2.0"
pytz = "2024.1"
pyxnat = "1.6.2"
PyYAML = "6.0.1"
pyzmq = "26.2.0"
rdflib = "6.3.2"
referencing = "0.35.1"
requests = "2.31.0"
requests-oauthlib = "2.0.0"
retrying = "1.3.4"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.20.1"
rsa = "4.9"
scikit-learn = "1.3.2"
scipy = "1.7.3"
seaborn = "0.13.2"
Send2Trash = "1.8.3"
similaritymeasures = "0.4.4"
simple-parsing = "0.0.19.post1"
simplejson = "3.19.3"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
spatialmath-python = "1.1.10"
SQLAlchemy = "1.4.46"
stack-data = "0.6.3"
starlette = "0.41.2"
stevedore = "3.5.2"
tenacity = "8.2.3"
tensorboard = "2.5.0"
tensorboard-data-server = "0.6.1"
tensorboard-plugin-wit = "1.8.1"
terminado = "0.18.1"
threadpoolctl = "3.5.0"
tinycss2 = "1.4.0"
tk = "0.1.0"
tomli = "2.2.1"
torch = "1.13.1"
torchvision = "0.12.0"
tornado = "6.4.1"
tqdm = "4.66.5"
traitlets = "5.14.3"
traits = "6.3.2"
types-python-dateutil = "2.9.0.20241206"
typing-inspect = "0.9.0"
typing_extensions = "4.7.1"
tzdata = "2024.1"
uri-template = "1.3.0"
urllib3 = "2.0.7"
uvicorn = "0.32.0"
virtualenv = "20.26.3"
wcwidth = "0.2.13"
webcolors = "24.8.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
Werkzeug = "*"
zipp = "3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
